--- a/style.css
+++ b/style.css
@@ -1,3 +1,272 @@
+/* Document outline */
+html{
+    background-color:#000;
+    font-family: Arial, Helvetica, sans-serif;
+}
 body{
-    color: red;
+    background-color: #fff;
+    width: 1300px;
+    margin: 0 auto;
+}
+p{
+    font-size: 1.25em;
+}
+figcaption, label, input, small {
+    font-size: 1em;
+}
+
+/* headers */
+h1{
+    font-size: 3em;
+    color: #007d7b;
+    margin: 0;
+    padding: 20px;
+}
+h2{
+    font-size: 2em;
+    margin: 0;
+    padding: 10px 0;
+}
+main{
+    margin: 0;
+}
+main h2{
+    text-align: center;
+}
+main p{
+    padding: 0 15px;
+}
+
+/* nav */
+nav {
+    background-color: black;
+    text-align: right;
+    padding: 20px 0;
+  }
+nav a{
+    font-size: 1.5em;
+    font-weight: bold;
+}
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+nav ul li {
+    display: inline-block;
+}
+nav ul li a {
+    display: block;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+}
+[href="#top"] {
+    position:fixed;
+    bottom: 0px;
+    right: 0;
+    color: white;
+    background-color: black;
+    border: 2px solid white;
+    z-index: 100;
+}
+nav a:hover {
+    background-color: #007d7b;
+    color: #fff;
+}
+
+/* gallery */
+.gallery {
+    margin: 0 auto;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    width: 99%;
+    height: 100%;
+    box-sizing: border-box;
+}
+.gallery img{
+    z-index: 1;
+    width: 100vw;
+    max-width: 100%;
+}
+.item{
+    text-align: center;
+    position: relative;
+
+}
+.caption{
+    text-align: center;
+    z-index: 2;
+    width: 420px;
+    position: absolute;
+    top: 5%;
+    left: 0;
+    right: 0;
+}
+.whitebottom{
+    top: 85%;
+    color: white;
+}
+.whitetop{
+    color: white;
+}
+#italy{
+    top: 93%;
+}
+
+
+/* form */
+form{
+    background-color: black;
+    color: white;
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+form h2, form p{
+    text-align: center;
+}
+label {
+    display: block;
+}
+  
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    border: none;
+    resize: none;
+} 
+input::placeholder{
+    color: #007d7b;
+    font-weight: bold;
+}
+button[type="submit"] {
+    background-color: #007d7b;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    width: 70%;
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+}
+  
+button[type="submit"]:hover {
+    background-color: #007d7b;
+}
+#button{
+    text-align: center;
+}
+#blackcontact{
+    background-color: black;
+    width: 100%;
+}
+input[type="text"]:hover, input[type="email"]:hover, textarea:hover {
+  background-color: lightblue;
+}
+
+/* footer */
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+  
+
+/* media queries */
+
+/* Styles for screens 880px or less */
+@media screen and (max-width: 880px) {
+    nav{
+        margin: 0;
+        text-align: center;
+    }
+    .gallery {
+        margin: 0 auto;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(2, .5fr);
+        grid-gap: 10px;
+        width: 99%;
+        height: 100%;
+        box-sizing: border-box;
+    }
+    .caption{
+        width: auto;
+    }
+    .whitebottom{
+        top: 350px;
+    }
+
+}
+
+  
+@media screen and (max-width: 485px){
+    /* Document outline */
+    p{
+        font-size: 4em;
+    }
+    figcaption, label, input, small {
+        font-size: 2em;
+    }
+
+    /* headers */
+    h1{
+        font-size: 6em;
+    }
+    h2{
+        font-size: 5em;
+    }
+
+    /* nav */
+    nav {
+        text-align: center;
+        padding: 50px 0;
+        font-size: 50px;
+    }
+
+    /* gallery */
+    .gallery{
+        display: block;
+    }
+    /* form */
+    form{
+        width: 80%;
+        margin: 0 auto;
+        padding-top: 20px;
+    }
+    form h2{
+        font-size: 5em;
+    }
+    form p{
+        font-size: 2.3em;
+    }
+    label {
+        font-size: 3em;
+    }
+    input, textarea {
+        width: 100%;
+        padding: 30px;
+        margin-bottom: 80px;
+        font-size: 3em;
+    }
+    button[type="submit"] {
+        padding: 30px 20px;
+        margin: 40px;
+        border-radius: 50px;
+        font-size: 3em;
+    }
+
+    /* footer */
+    footer{
+        padding: 100px 0;
+        font-size: 2.5em;
+    }
+
 }
